fix scrolling on mobile view

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -520,6 +520,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 1rem;
 }
 
+.mt-8 {
+  margin-top: 2rem;
+}
+
 .inline-block {
   display: inline-block;
 }
